@@ -1,3 +1,4 @@
+- 2021-10-01: Update to AirConnect v0.2.51.1
 - 2021-07-01: Update to AirConnect v0.2.50.5
 - 2021-03-12: Update to AirConnect v0.2.50.1
               Remove custom binary in favour of using '--noflush' option
